eliminate imgur images

--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@
         </th></tr></tbody></table></th>
         <th class="small-12 large-3 columns"><table><tbody><tr><th>
           <center>
-            <img src="https://imgur.com/UWyJA5y" alt align="center" class="float-center">
+            <img src="/images/check.png" alt align="center" class="float-center">
           </center>
           <p>SATISFACTION GAURANTEED</p>
         </th></tr></tbody></table></th>
         <th class="small-12 large-3 columns last"><table><tbody><tr><th>
           <center>
-            <img src="https://imgur.com/LCFX2HQ" alt align="center" class="float-center">
+            <img src="/images/hassel.png" alt align="center" class="float-center">
           </center>
           <p>HASSEL-FREE RETURNS</p>
         </th></tr></tbody></table></th>
@@ -290,7 +290,7 @@
       <table class="row footer-logo"><tbody><tr>
         <th class="small-12 large-12 columns first last"><table><tbody><tr><th>
           <center>
-            <img src="https://imgur.com/a/LZtGZY3" alt align="center" class="float-center">
+            <img src="/images/chewy-grey.png" alt align="center" class="float-center">
           </center>
         </th>
 <th class="expander"></th></tr></tbody></table></th>
