--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
             <th class="small-12 large-6 columns"><table><tbody><tr><th>
               <p class="small-text-center description-p">
-                Wet Ones Anti Bacterial Paw $ Tushie Tropical Splash Scent Dow Wipes
+                Wet Ones Anti Bacterial Paw &amp; Tushie Tropical Splash Scent Dow Wipes
               </p>
             </th></tr></tbody></table></th>
             <th class="small-6 large-2 columns"><table><tbody><tr><th>
